--- a/web-app/local-console/css/style.css
+++ b/web-app/local-console/css/style.css
@@ -1181,6 +1181,11 @@ a:active {
 .flat-theme .rad-sidebar li:hover {
   background: #28282a !important;
 }
+
+.rad-sidebar li.active {
+  background: rgba(40, 40, 42, 0.15) !important;
+}
+
 .flat-theme .rad-sidebar li:hover span {
   color: crimson !important;
 }
