--- a/src/main/webapp/css/sandbox.css
+++ b/src/main/webapp/css/sandbox.css
@@ -1,296 +1,154 @@
-/*@import url(https://fonts.googleapis.com/css?family=Lato:300italic,700italic,300,700);*/
 
-body {
-  padding:50px;
-  font:14px/1.5 Lato, "Helvetica Neue", Helvetica, Arial, sans-serif;
-  color:#777;
-  font-weight:300;
+.container-fs {
+    margin: 0;
+    padding: 0;
+    height: 100%;
+    width: 100%;
+    overflow: hidden;
 }
 
-h1, h2, h3, h4, h5, h6 {
-  margin: 20px 0 10px;
+#editor {
+    padding-left: 0;
+    padding-right: 0;
+    display: inline-block;
 }
 
-p, ul, ol, table, pre, dl {
-  margin:0 0 20px;
+#sidebar {
+    padding-right: 0;
+    display: inline-block;
 }
 
-h1, h2, h3 {
-  line-height:1.1;
+.editor {
+   border-right:3px #eee solid;
 }
 
-h1 {
-  font-size:28px;
+/*
+@media (max-width: 939px) {
+	.row .sidebar {
+    	width:48.62% !important;
+	}
+}
+@media (max-width: 767px) {
+	.row .sidebar {
+    	width:100% !important;
+        height:auto !important;
+	}
+}
+@media (max-width: 1200px) {
+	.row .sidebar {
+    	width:49.62% !important;
+	}
+}
+@media (max-width: 767px) {
+	.row .sidebar {
+    	width:100% !important;
+        height:auto !important;
+	}
+}
+*/
+
+.start_hidden {
+    display: none;
 }
 
-h2 {
-  color:#393939;
+.sidebar .tab {
+    padding-top: 10px;
 }
 
-h3, h4, h5, h6 {
+.sidebar .tab {
+    overflow-y: auto;
+    padding-right: 15px;
 }
 
-a {
-  color:#39c;
-  font-weight:400;
-  text-decoration:none;
+.inner {
+	overflow-y:auto;
+    overflow-x:hidden;
+    height:100%;
 }
 
-a:hover {
-  color:#069;
+/*.ui-resizable { position: relative;}*/
+/*.ui-resizable-handle { position: absolute;font-size: 0.1px;z-index: 99999; display: block; }*/
+.ui-resizable-e { cursor: col-resize; }
+
+.sidebar {
+    padding-top: 10px;
 }
 
-a small {
-  font-size:11px;
-  color:#777;
-  margin-top:-0.6em;
-  display:block;
+#editor_input {
+    height: 300px;
 }
 
-a:hover small {
-  color:#777;
-}
 
-.wrapper {
-  width:860px;
-  margin:0 auto;
-}
 
-blockquote {
-  border-left:1px solid #e5e5e5;
-  margin:0;
-  padding:0 0 0 20px;
-  font-style:italic;
-}
 
-code, pre {
-  font-family:Monaco, Bitstream Vera Sans Mono, Lucida Console, Terminal, monospace;
-  color:#333;
-  font-size:12px;
-}
+/* COMPILER OUTPUT */
 
-pre {
-  padding:8px 15px;
-  background: #f8f8f8;
-  border-radius:5px;
-  border:1px solid #e5e5e5;
-  overflow-x: auto;
-}
-
-table {
-  width:100%;
-  border-collapse:collapse;
-}
-
-th, td {
-  text-align:left;
-  padding:5px 10px;
-  border-bottom:1px solid #e5e5e5;
-}
-
-dt {
-  color:#444;
-  font-weight:700;
-}
-
-th {
-  color:#444;
-}
-
-img {
-  max-width:100%;
-}
-
-header {
-  width:270px;
-  float:left;
-  position:fixed;
-}
-
-header ul {
-  list-style:none;
-  height:40px;
-
-  padding:0;
-
-  background: #eee;
-  background: -moz-linear-gradient(top, #f8f8f8 0%, #dddddd 100%);
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#f8f8f8), color-stop(100%,#dddddd));
-  background: -webkit-linear-gradient(top, #f8f8f8 0%,#dddddd 100%);
-  background: -o-linear-gradient(top, #f8f8f8 0%,#dddddd 100%);
-  background: -ms-linear-gradient(top, #f8f8f8 0%,#dddddd 100%);
-  background: linear-gradient(top, #f8f8f8 0%,#dddddd 100%);
-
-  border-radius:5px;
-  border:1px solid #d2d2d2;
-  box-shadow:inset #fff 0 1px 0, inset rgba(0,0,0,0.03) 0 -1px 0;
-  width:270px;
-}
-
-header li {
-  width:89px;
-  float:left;
-  border-right:1px solid #d2d2d2;
-  height:40px;
-}
-
-header li:first-child a {
-  border-radius:5px 0 0 5px;
-}
-
-header li:last-child a {
-  border-radius:0 5px 5px 0;
-}
-
-header ul a {
-  line-height:1;
-  font-size:11px;
-  color:#999;
-  display:block;
-  text-align:center;
-  padding-top:6px;
-  height:34px;
-}
-
-header ul a:hover {
-  color:#999;
-  background: -moz-linear-gradient(top, #fff 0%, #ddd 100%);
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#fff), color-stop(100%,#ddd));
-  background: -webkit-linear-gradient(top, #fff 0%,#ddd 100%);
-  background: -o-linear-gradient(top, #fff 0%,#ddd 100%);
-  background: -ms-linear-gradient(top, #fff 0%,#ddd 100%);
-  background: linear-gradient(top, #fff 0%,#ddd 100%);
-}
-
-header ul a:active {
-  -webkit-box-shadow: inset 0px 2px 2px 0px #ddd;
-  -moz-box-shadow: inset 0px 2px 2px 0px #ddd;
-  box-shadow: inset 0px 2px 2px 0px #ddd;
-}
-
-strong {
-  color:#222;
-  font-weight:700;
-}
-
-header ul li + li {
-  width:88px;
-  border-left:1px solid #fff;
-}
-
-header ul li + li + li {
-  border-right:none;
-  width:89px;
-}
-
-header ul a strong {
-  font-size:14px;
-  display:block;
-  color:#222;
-}
-
-section {
-  width:500px;
-  float:right;
-  padding-bottom:50px;
-}
-
-small {
-  font-size:11px;
-}
-
-hr {
-  border:0;
-  background:#e5e5e5;
-  height:1px;
-  margin:0 0 20px;
-}
-
-footer {
-  width:270px;
-  float:left;
-  position:fixed;
-  bottom:50px;
-}
-
-@media print, screen and (max-width: 960px) {
-
-  div.wrapper {
-    width:auto;
-    margin:0;
-  }
-
-  header, section, footer {
-    float:none;
-    position:static;
-    width:auto;
-  }
-
-  header {
-    padding-right:320px;
-  }
-
-  section {
-    border:1px solid #e5e5e5;
-    border-width:1px 0;
-    padding:20px 0;
-    margin:0 0 20px;
-  }
-
-  header a small {
-    display:inline;
-  }
-
-  header ul {
-    position:absolute;
-    right:50px;
-    top:52px;
-  }
-}
-
-@media print, screen and (max-width: 720px) {
-  body {
-    word-wrap:break-word;
-  }
-
-  header {
-    padding:0;
-  }
-
-  header ul, header p.view {
-    position:static;
-  }
-
-  pre, code {
-    word-wrap:normal;
-  }
-}
-
-@media print, screen and (max-width: 480px) {
-  body {
-    padding:15px;
-  }
-
-  header ul {
-    display:none;
-  }
-}
-
-@media print {
-  body {
-    padding:0.4in;
-    font-size:12pt;
-    color:#444;
-  }
-}
-
-#output h2 {
-    padding-left: 1em;
+#output h3 {
     text-decoration: underline;
 }
 
-#output h2 i {
-    float: right;
-    padding-right: 1em;
-    cursor: pointer;
+.udapp .contract > .title {
+    cursor:pointer;
+}
+
+.udapp .contract > .title:before {
+    content: "\25BC";
+    opacity: 0.5;
+    margin-right: 0.4em;
+    font-size: 10px;
+}
+
+.contract.expand > .title:before {
+    content: "\25B6";
+}
+
+.udapp .title {
+	margin-bottom: 0.4em;
+	display: inline-block;
+	padding: 0.2em;
+	background-color: rgba( 255,255,255,0.5 );
+	display: block;
+	font-weight: bold;
+	padding-right: 2em;
+	word-wrap: break-word;
+	position: relative;
+}
+
+.udapp .title .size {
+	position: absolute;
+	right: 2.2em;
+	top: 0.2em;
+	font-weight: normal;
+}
+
+.gethDeployText {
+    border-color: #bebebe;
+    height: 2.5em;
+    width: 100%;
+    display: block;
+}
+
+.keyval-row {
+    overflow: auto;
+    display: block;
+    clear: both;
+    margin-top: 0.5em;
+}
+
+.col1 {
+    width: 30%;
+    float: left;
+}
+
+.col2 {
+    width: 70%;
+    float: left;
+}
+
+input[readonly] {
+    padding: .4em;
+    border: 1px solid #ccc;
+    box-sizing: border-box;
+    display: block;
+    width: 100%;
 }
