[sandbox] factor out filetab handling and rework for new layout"

--- a/src/main/webapp/css/sandbox.css
+++ b/src/main/webapp/css/sandbox.css
@@ -79,6 +79,13 @@
 }
 
 
+/* FILE TABS */
+.red {
+    color: red;
+}
+.filetabs li a {
+    cursor: pointer !important;
+}
 
 
 /* COMPILER OUTPUT */
