[sandbox] fix window/editor resizing

--- a/src/main/webapp/css/sandbox.css
+++ b/src/main/webapp/css/sandbox.css
@@ -11,11 +11,14 @@
     padding-left: 0;
     padding-right: 0;
     display: inline-block;
+    min-width: 500px;
 }
 
 #sidebar {
+    padding-left: 15px;
     padding-right: 0;
     display: inline-block;
+    min-width: 330px;
 }
 
 .editor {
