[sandbox] added contract lib links

--- a/src/main/webapp/css/sandbox.css
+++ b/src/main/webapp/css/sandbox.css
@@ -186,3 +186,9 @@ input[readonly] {
     display: block;
     width: 100%;
 }
+
+/* CONTRACT LIBRARY */
+
+#libView a.contract {
+    cursor: pointer;
+}
