--- a/src/main/webapp/css/sandbox.css
+++ b/src/main/webapp/css/sandbox.css
@@ -117,6 +117,39 @@
 
 /* COMPILER OUTPUT */
 
+.sol.error, .sol.warning {
+    border-radius: 0;
+    word-wrap: break-word;
+    cursor: pointer;
+    position: relative;
+    margin: 0.25em;
+}
+
+.sol.error pre, .sol.warning pre {
+    background-color: transparent;
+    margin: 0;
+    font-size: 10px;
+    border: 0 none;
+}
+
+.sol.error .close, .sol.warning .close {
+    font-weight: bold;
+    position: absolute;
+    top: 0;
+    right: 0;
+    padding: 0.5em;
+}
+
+.sol.error {
+    background-color: rgba(255, 0, 0, 0.5);
+    border: 1px solid #D00909;
+}
+
+.sol.warning {
+    background-color: rgba(210, 202, 36, 0.5);
+    border: 1px solid #BBB427;
+}
+
 #output h3 {
     text-decoration: underline;
 }
