--- a/cakeshop-client-java/src/main/resources/function-read.vm
+++ b/cakeshop-client-java/src/main/resources/function-read.vm
@@ -1,7 +1,7 @@
 
   public List<Object> ${entry.name}(${util.methodSignature($entry.inputs)}) {
     Object[] inputs = new Object[]{ ${util.inputList($entry.inputs)} };
-    inputs = processInputArgs(inputs);
+    processInputArgs(inputs);
     APIResponse<List<Object>, Object> res =
       contractApi.read(new ContractMethodCallCommand().address(contractAddress).method("${entry.name}").args(inputs));
     return res.getApiData();
