--- a/cakeshop-client-java/src/main/resources/function-transact.vm
+++ b/cakeshop-client-java/src/main/resources/function-transact.vm
@@ -1,7 +1,7 @@
 
   public TransactionResult ${entry.name}(${util.methodSignature($entry.inputs)}) {
     Object[] inputs = new Object[]{ ${util.inputList($entry.inputs)} };
-    inputs = processInputArgs(inputs);
+    processInputArgs(inputs);
     APIResponse<APIData<TransactionResult>, TransactionResult> res =
       contractApi.transact(new ContractMethodCallCommand().address(contractAddress).method("${entry.name}").args(inputs));
     return res.getData();
