--- a/cakeshop-client-java/src/main/resources/contract.vm
+++ b/cakeshop-client-java/src/main/resources/contract.vm
@@ -13,6 +13,8 @@ import java.util.List;
 
 public class $className extends ContractProxy<$className> {
 
+  #parse("methods-ref.vm")
+
   public static final String jsonAbi = "$jsonAbi";
   public static final ContractABI abi = ContractABI.fromJson(jsonAbi);
 
