--- a/cakeshop-client-java/src/main/resources/function-transact.vm
+++ b/cakeshop-client-java/src/main/resources/function-transact.vm
@@ -2,6 +2,6 @@
   public TransactionResult ${entry.name}(${util.methodSignature($entry.inputs)}) {
     Object[] inputs = new Object[]{ ${util.inputList($entry.inputs)} };
     processInputArgs(inputs);
-    APIResponse<APIData<TransactionResult>, TransactionResult> res = contractApi.transact(newCall("${entry.name}", inputs));
+    APIResponse<APIData<TransactionResult>, TransactionResult> res = contractApi.transact(newCall(METHODS.${entry.name}, inputs));
     return res.getData();
   }
