[sandbox] split out tour; fixed nav

--- a/cakeshop-api/src/main/webapp/css/sandbox.css
+++ b/cakeshop-api/src/main/webapp/css/sandbox.css
@@ -43,6 +43,10 @@ nav.sidenav ul.navbar-right a {
     font-size: 2em;
 }
 
+nav ul {
+  cursor: pointer;
+}
+
 nav.sidenav ul.navbar-right li.block_number a {
     font-weight: bold;
 }
