--- a/cakeshop-api/src/main/webapp/css/style.css
+++ b/cakeshop-api/src/main/webapp/css/style.css
@@ -118,7 +118,7 @@ a:active {
 	box-shadow: 0 0px 9px 4px rgba(0, 0, 0, 0.1), 0 -5px 2px 2px
 		rgba(0, 0, 0, 0.1);
 	background: white;
-	z-index: 10000;
+	z-index: 1000;
 	text-align: center;
 }
 
@@ -224,7 +224,7 @@ a:active {
 }
 
 .tower-sidebar {
-	z-index: 9999;
+	z-index: 1000;
 	position: fixed;
 	font-weight: 600;
 	background: white !important;
@@ -737,4 +737,8 @@ pre {
 .version-info {
     text-align: center;
     font-size: smaller;
+}
+
+#newchainconfirm .modal-dialog {
+	width: 30%;
 }
