--- a/cakeshop-api/src/main/webapp/css/style.css
+++ b/cakeshop-api/src/main/webapp/css/style.css
@@ -736,3 +736,8 @@ td.locked i.fa-lock {
 .fund-accounts-form input {
 	margin-bottom: 8px;
 }
+
+.error-msg {
+	color: #c51616;
+	padding-right: 5px;
+}
