--- a/cakeshop-api/src/main/webapp/css/style.css
+++ b/cakeshop-api/src/main/webapp/css/style.css
@@ -715,19 +715,19 @@ pre {
 
 td.locking-col {
 	float: right;
+	width: 100%;
+}
+
+.locking-btn {
+	float: right;
 }
 
 .unlocked-col {
 	width: 30px;
-	font-size: 18px;
+	font-size: 17px;
 }
 
 td.locked i.fa-lock {
-	opacity: 1;
-}
-
-.unlocked-col i:hover {
-	cursor: pointer;
 	opacity: 1;
 }
 
